hn_tests/opt/failing/funfun.hn
hnMain = print (sum 5 (incr 5))